    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.apress.gerber.ucsdbulletinboard.CreateAccountAct"
        android:background="@drawable/background_feather"
        android:alpha = ".8">

        <!-- progress circle animation -->
        <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" android:visibility="gone" />

        <ScrollView android:id="@+id/signup_form" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout android:id="@+id/email_signup_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <AutoCompleteTextView android:id="@+id/firstName" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="First Name"
                    android:textColorHint="@color/text_large_color"
                    android:inputType="textCapSentences" android:maxLines="1"
                    android:singleLine="true" />

                <AutoCompleteTextView android:id="@+id/lastName" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="Last Name"
                    android:textColorHint="@color/text_large_color"
                    android:inputType="textCapSentences" android:maxLines="1"
                    android:singleLine="true" />

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:textColorHint="@color/text_large_color"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

                <EditText android:id="@+id/password1" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="Password"
                    android:textColorHint="@color/text_large_color"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

                <EditText android:id="@+id/password2" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="Confirm Password"
                    android:textColorHint="@color/text_large_color"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

                <Button android:id="@+id/email_signup_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="Create New Account"
                    android:textColor="@color/text_large_color"
                    android:background="@color/color_pink"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

</RelativeLayout>
