<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apress.gerber.ucsdbulletinboard.LoginActivity"
    android:windowSoftInputMode="stateAlwaysHidden"
    android:background="@drawable/background_feather"
    android:alpha = ".8">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:textColorHint="@color/text_large_color"
                android:singleLine="true"
                android:textColor="@color/text_large_color" />

            <AutoCompleteTextView android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="Password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/text_large_color"
                android:singleLine="true"
                android:textColor="@color/text_large_color" />

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="Sign In"
                android:textColor="@color/text_large_color"
                android:background="@color/event_color"
                android:textStyle="bold" />

            <Button android:id="@+id/create_new_account_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="Do you need a new account?"
                android:textColor="@color/text_large_color"
                android:background="@color/color_pink"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

