<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_feather"
    android:alpha = "1"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Featured Events"
        android:gravity="center"
        android:textSize="24dp"
        android:textColor="@color/text_large_color"
        android:textStyle="bold"
        android:id="@+id/textView"/>

    <!--<Button
        android:id="@+id/create_event_page_button"
        android:text="@string/create_new_event"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" /> -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left|bottom"
        android:orientation="vertical"
        android:weightSum="1"
        >
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nav_list_fe"
            android:choiceMode="singleChoice"
            android:background="@color/title_color"
            android:alpha="0.8">

        </ListView>



        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|right"
            android:id="@+id/add_new_event_png"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp" />
    </RelativeLayout>

</LinearLayout>